# rust-cxx-interop-comparison

./: Cargo.toml
autocxx/: Cargo.toml  build.rs
autocxx/include/: demo.h
autocxx/src/: demo.cc  main.rs
bindgen/: Cargo.toml  build.rs
bindgen/src/: main.rs
cxx/: build.rs
cxx/include/: demo.h
cxx/src/: main.rs
manual/: Cargo.toml  build-c.sh  build.rs  demo.cc  demo.hpp
manual/src/: main.rs
src/: demo.cc  main.rs
